PR/44148: Henning Petersen: catstrg() does not set the resulting string length.